set default env values

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,9 @@
+# FETCH_OCA_DEPENDENCIES=false
+
+# ADDONS_REPO=git@github.com:Elico-Corp/odoo-private-addons.git
+
 ODOO_ADMIN_PASSWD=strong_odoo_master_password
 ODOO_DB_USER=odoo
 ODOO_DB_PASSWORD=strong_pg_superuser_password
 # TARGET_UID=1001
+# ODOO_PORT=18069
