--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - ~/.ssh:/opt/odoo/ssh:ro
     environment:
       - ODOO_ADMIN_PASSWD=${ODOO_ADMIN_PASSWD:?Please configure in .env}
-      - ODOO_DB_USER=${ODOO_DB_USER:?Please configure in .env}
+      - ODOO_DB_USER=odoo
       - ODOO_DB_PASSWORD=${ODOO_DB_PASSWORD:?Please configure in .env}
     depends_on:
       db:
